Att Teste Cabeçalho

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div class="header"></div>
+  <img src="https://joaoaugustompdj.github.io/Nutriccalculator/cabeçalho.png" alt="Cabeçalho">
   <div class="calculator">
-    <h1>Calculadora de Gasto Calórico</h1>
     <form id="calorie-form">
       <label for="gender">Sexo:</label>
       <select id="gender" required>
