--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  <div class="header"></div>
-
+  <div class="header"> <img src="https://joaoaugustompdj.github.io/Nutriccalculator/cabeçalho.png" alt="Cabeçalho"></div>
+ 
   <div class="calculator">
     <form id="calorie-form">
       <label for="gender">Sexo:</label>
