--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  <div class="header"> <img src="https://joaoaugustompdj.github.io/Nutriccalculator/cabeçalho.png" alt="Cabeçalho"></div>
+  <div class="header"></div>
  
   <div class="calculator">
+    <img src="https://joaoaugustompdj.github.io/Nutriccalculator/cabeçalho.png" alt="Cabeçalho">
     <form id="calorie-form">
       <label for="gender">Sexo:</label>
       <select id="gender" required>
