--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  <img src="https://joaoaugustompdj.github.io/Nutriccalculator/cabeçalho.png" alt="Cabeçalho">
-  <div class="header"></div>
+  
+  <div class="header"><img src="https://joaoaugustompdj.github.io/Nutriccalculator/cabeçalho.png" alt="Cabeçalho"></div>
  
   <div class="calculator">
     
