--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <script src="script.js" defer></script>
 </head>
 <body>
+  <h1><img src="https://joaoaugustompdj.github.io/Nutriccalculator/cabeçalho.png" alt="Cabeçalho"></h1>
   
-  <div class="header"><img src="https://joaoaugustompdj.github.io/Nutriccalculator/cabeçalho.png" alt="Cabeçalho"></div>
- 
   <div class="calculator">
     
     <form id="calorie-form">
