--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  <h1><img src="https://joaoaugustompdj.github.io/Nutriccalculator/cabeçalho.png" alt="Cabeçalho"></h1>
+  <header>
+    <img src="https://joaoaugustompdj.github.io/Nutriccalculator/cabeçalho.png" alt="Cabeçalho">
+  </header>
   <br></br>
   <div class="calculator">
     
