--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <img src="https://joaoaugustompdj.github.io/Nutriccalculator/cabeçalho.png" alt="Cabeçalho">
+    <img src="https://joaoaugustompdj.github.io/Nutriccalculator/PROTOCOLO-BDF.png" alt="Cabeçalho">
   </header>
   <br></br>
   <div class="calculator">
